# ui_forge

./: README.md  common.py  pyproject.toml  test_utils.py  tests.py  ui.py  view.py
.github/workflows/: python-publish.yml
cursesui/: __init__.py  actions.py  common.py  selector.py  ui.py
examples/: example-1.py
ui_forge/: actions.py  common.py  items.py  selector.py  ui.py
