[tool.poetry]
name = "curses-ui"
version = "0.1.0"
description = "A WIP procedurally generated TUI made in NCurses using Python for CCSM"
authors = ["CJ Gilroy <cjendantix@proton.me>"]
license = "Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
